# yacpd

./: .gitignore  Cargo.toml  LICENSE  README.md  VERIFICATION_REPORT.md
.github/workflows/: ci.yml
benches/: patterns.rs
src/: lib.rs  params.rs
src/detectors/: extended.rs  helpers.rs  mod.rs  multi_bar.rs  single_bar.rs  three_bar.rs  two_bar.rs
tests/: extended_patterns.rs  patterns.rs  talib_crossval.rs  talib_validation.py
