[package]
name = "yacpd"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Yet Another Candlestick Pattern Detector - high-performance candlestick pattern detection library"
license = "MIT"
repository = "https://github.com/7jrxt42BxFZo4iAnN4CX/yacpd"
keywords = ["candlestick", "trading", "technical-analysis", "finance", "patterns"]
categories = ["finance", "algorithms"]
readme = "README.md"

[lib]
name = "yacpd"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
rayon = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "patterns"
harness = false
